--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "compression": "^1.7.5",
