--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
